; ModuleID = '/home/carl/AnghaBench/openwrt/tools/firmware-utils/src/extr_imagetag_cmdline.c_clear_given.c'
source_filename = "/home/carl/AnghaBench/openwrt/tools/firmware-utils/src/extr_imagetag_cmdline.c_clear_given.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gengetopt_args_info = type { i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gengetopt_args_info*)* @clear_given to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @clear_given(%struct.gengetopt_args_info* %0) #0 {
  %2 = alloca %struct.gengetopt_args_info*, align 8
  store %struct.gengetopt_args_info* %0, %struct.gengetopt_args_info** %2, align 8
  %3 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %2, align 8
  %4 = getelementptr inbounds %struct.gengetopt_args_info, %struct.gengetopt_args_info* %3, i32 0, i32 27
  store i64 0, i64* %4, align 8
  %5 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %2, align 8
  %6 = getelementptr inbounds %struct.gengetopt_args_info, %struct.gengetopt_args_info* %5, i32 0, i32 26
  store i64 0, i64* %6, align 8
  %7 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %2, align 8
  %8 = getelementptr inbounds %struct.gengetopt_args_info, %struct.gengetopt_args_info* %7, i32 0, i32 25
  store i64 0, i64* %8, align 8
  %9 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %2, align 8
  %10 = getelementptr inbounds %struct.gengetopt_args_info, %struct.gengetopt_args_info* %9, i32 0, i32 24
  store i64 0, i64* %10, align 8
  %11 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %2, align 8
  %12 = getelementptr inbounds %struct.gengetopt_args_info, %struct.gengetopt_args_info* %11, i32 0, i32 23
  store i64 0, i64* %12, align 8
  %13 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %2, align 8
  %14 = getelementptr inbounds %struct.gengetopt_args_info, %struct.gengetopt_args_info* %13, i32 0, i32 22
  store i64 0, i64* %14, align 8
  %15 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %2, align 8
  %16 = getelementptr inbounds %struct.gengetopt_args_info, %struct.gengetopt_args_info* %15, i32 0, i32 21
  store i64 0, i64* %16, align 8
  %17 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %2, align 8
  %18 = getelementptr inbounds %struct.gengetopt_args_info, %struct.gengetopt_args_info* %17, i32 0, i32 20
  store i64 0, i64* %18, align 8
  %19 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %2, align 8
  %20 = getelementptr inbounds %struct.gengetopt_args_info, %struct.gengetopt_args_info* %19, i32 0, i32 19
  store i64 0, i64* %20, align 8
  %21 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %2, align 8
  %22 = getelementptr inbounds %struct.gengetopt_args_info, %struct.gengetopt_args_info* %21, i32 0, i32 18
  store i64 0, i64* %22, align 8
  %23 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %2, align 8
  %24 = getelementptr inbounds %struct.gengetopt_args_info, %struct.gengetopt_args_info* %23, i32 0, i32 17
  store i64 0, i64* %24, align 8
  %25 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %2, align 8
  %26 = getelementptr inbounds %struct.gengetopt_args_info, %struct.gengetopt_args_info* %25, i32 0, i32 16
  store i64 0, i64* %26, align 8
  %27 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %2, align 8
  %28 = getelementptr inbounds %struct.gengetopt_args_info, %struct.gengetopt_args_info* %27, i32 0, i32 15
  store i64 0, i64* %28, align 8
  %29 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %2, align 8
  %30 = getelementptr inbounds %struct.gengetopt_args_info, %struct.gengetopt_args_info* %29, i32 0, i32 14
  store i64 0, i64* %30, align 8
  %31 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %2, align 8
  %32 = getelementptr inbounds %struct.gengetopt_args_info, %struct.gengetopt_args_info* %31, i32 0, i32 13
  store i64 0, i64* %32, align 8
  %33 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %2, align 8
  %34 = getelementptr inbounds %struct.gengetopt_args_info, %struct.gengetopt_args_info* %33, i32 0, i32 12
  store i64 0, i64* %34, align 8
  %35 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %2, align 8
  %36 = getelementptr inbounds %struct.gengetopt_args_info, %struct.gengetopt_args_info* %35, i32 0, i32 11
  store i64 0, i64* %36, align 8
  %37 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %2, align 8
  %38 = getelementptr inbounds %struct.gengetopt_args_info, %struct.gengetopt_args_info* %37, i32 0, i32 10
  store i64 0, i64* %38, align 8
  %39 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %2, align 8
  %40 = getelementptr inbounds %struct.gengetopt_args_info, %struct.gengetopt_args_info* %39, i32 0, i32 9
  store i64 0, i64* %40, align 8
  %41 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %2, align 8
  %42 = getelementptr inbounds %struct.gengetopt_args_info, %struct.gengetopt_args_info* %41, i32 0, i32 8
  store i64 0, i64* %42, align 8
  %43 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %2, align 8
  %44 = getelementptr inbounds %struct.gengetopt_args_info, %struct.gengetopt_args_info* %43, i32 0, i32 7
  store i64 0, i64* %44, align 8
  %45 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %2, align 8
  %46 = getelementptr inbounds %struct.gengetopt_args_info, %struct.gengetopt_args_info* %45, i32 0, i32 6
  store i64 0, i64* %46, align 8
  %47 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %2, align 8
  %48 = getelementptr inbounds %struct.gengetopt_args_info, %struct.gengetopt_args_info* %47, i32 0, i32 5
  store i64 0, i64* %48, align 8
  %49 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %2, align 8
  %50 = getelementptr inbounds %struct.gengetopt_args_info, %struct.gengetopt_args_info* %49, i32 0, i32 4
  store i64 0, i64* %50, align 8
  %51 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %2, align 8
  %52 = getelementptr inbounds %struct.gengetopt_args_info, %struct.gengetopt_args_info* %51, i32 0, i32 3
  store i64 0, i64* %52, align 8
  %53 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %2, align 8
  %54 = getelementptr inbounds %struct.gengetopt_args_info, %struct.gengetopt_args_info* %53, i32 0, i32 2
  store i64 0, i64* %54, align 8
  %55 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %2, align 8
  %56 = getelementptr inbounds %struct.gengetopt_args_info, %struct.gengetopt_args_info* %55, i32 0, i32 1
  store i64 0, i64* %56, align 8
  %57 = load %struct.gengetopt_args_info*, %struct.gengetopt_args_info** %2, align 8
  %58 = getelementptr inbounds %struct.gengetopt_args_info, %struct.gengetopt_args_info* %57, i32 0, i32 0
  store i64 0, i64* %58, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
